--- a/app/src/main/res/layout/fragment_cars_list.xml
+++ b/app/src/main/res/layout/fragment_cars_list.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <com.amatkivskiy.buyersguide.ui.views.FixedRecyclerView
+        <com.amatkivskiy.buyersguide.ui.views.EmptyRecyclerView
             android:id="@+id/cars_recycler"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
