Fixed bugs with empty view.

--- a/app/src/main/res/layout/fragment_cars_list.xml
+++ b/app/src/main/res/layout/fragment_cars_list.xml
@@ -8,12 +8,25 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
         <com.amatkivskiy.buyersguide.ui.views.EmptyRecyclerView
             android:id="@+id/cars_recycler"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingLeft="16dp"
             android:paddingRight="16dp" />
+
+            <TextView
+                android:id="@+id/empty_text"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="gone"
+                android:gravity="center"/>
+
+        </FrameLayout>
 
     </android.support.v4.widget.SwipeRefreshLayout>
 
