--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -5,7 +5,7 @@
         android:id="@+id/search_cars"
         android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
         android:title="Search"
-        app:actionViewClass="com.amatkivskiy.buyersguide.util.FakeSearchView"
+        app:actionViewClass="com.amatkivskiy.buyersguide.util.ToolbarSearchView"
         app:showAsAction="ifRoom|collapseActionView" />
 
 </menu>
