--- a/app/src/main/res/layout/fragment_cars_list.xml
+++ b/app/src/main/res/layout/fragment_cars_list.xml
@@ -12,7 +12,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-        <com.amatkivskiy.buyersguide.ui.views.EmptyRecyclerView
+        <com.amatkivskiy.buyersguide.ui.view.EmptyRecyclerView
             android:id="@+id/cars_recycler"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
